# sbc-control-panel

./: .gitignore  CMakeLists.txt  README.md  build.sh  install_dependencies.sh  install_sudoers.sh  sbc_cp.service  setup_systemd.sh
includes/: ButtonWatcher.hpp  GpioPin.hpp  LedController.hpp  Logger.hpp  MicrophoneMonitor.hpp  NetworkMonitor.hpp  StateTypes.hpp  ZmqService.hpp
src/: ButtonWatcher.cpp  GpioPin.cpp  LedController.cpp  Logger.cpp  MicrophoneMonitor.cpp  NetworkMonitor.cpp  ZmqService.cpp  main.cpp
